--- a/About/Styles/about.css
+++ b/About/Styles/about.css
@@ -5,9 +5,9 @@ html{
   margin:auto;
 }
 body {
-  /*background: radial-gradient(#0D0664, #0A0731);
-  */
-  background-image: url(../Illustrator/NightSky.jpg);
+  background: radial-gradient(#0D0664, #0A0731);
+
+  /*background-image: url(../Illustrator/NightSky.jpg);*/
   background-size: cover;
 }
 
