--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@ html,body{
   height: 100%;
   width: 100%;
   margin:0px;
+  padding: 0px;
 }
 
 body{
-  background-image: url(pic2.jpg);
+  background: url(./About/Illustrator/NightSky.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-repeat: no-repeat;
   display:flex;
 }
 
